--- a/documentation/how-to.adoc
+++ b/documentation/how-to.adoc
@@ -107,7 +107,7 @@ ccsh git-metrics -p . -o gitmetrics.cc.json
 ccsh merge -i hogajama.cc.json gitmetrics.cc.json -o merged.cc.json
 ----
 
-== Conclusion
+=== Conclusion
 
 Using CodeCharta, the complexity and structure of a Java project can be visualized in a comprehensible way, both in technical discussions and workshops. CodeCharta allows teams to explore hotspots, legacy segments, and architectural patterns with intuitive 3D models. Combined with Git metrics, change frequency and ownership patterns can also be mapped effectively.
 
@@ -233,6 +233,134 @@ To run the REST requests, follow these steps:
 4. Replace placeholder variables with your actual values.
 5. Execute the wanted requests one by one or all at once, depending on your client capabilities.
 6. Review the responses for project metrics, issues, and settings.
+
+== Template Report Generator
+This chapter  demonstrates how to automate the generation of structured technical reports – for example, for software dependency, security, or license analysis – using a combination of templates, structured input files, and ChatGPT-based assistance.
+
+=== Goal
+
+* Automated generation of standardized Word reports based on a prefined template
+* Integration of various data sources (e.g., vulnerability scans, SBOMs, license reports, code metrics)
+* Consistent formatting and structure for easy readability and auditing
+* IEEE citation and reference management
+
+=== Requirements
+
+* Template file in Word format (e.g., `Empty-Analysebericht-V1.0.docx`)
+* ChatGPT instructions set
+* ChatGPT prompt input based on prompt template
+* Gepardec AutoUpdate analyzes data files (e.g., vulnerability scans, SBOMs, license, SonarQube reports) and/or other sources
+* (Optional) Additional input files such as images or graphs
+* (Optimal) Additional completed (anonymized) example reports for reference
+
+=== Required Input Files
+Underneath are some examples of required input files for the report generation. The file names are structured to include the project name and type of analysis, e.g., `mega-backend-vulnerabilities.json`, `mega-backend-sbom.json`, etc. The actual content and format may vary based on the tools used (e.g., Trivy, Grype, CycloneDX, SPDX, Gepardec AutoUpdater).
+
+[cols="1,2", options="header"]
+|===
+| File Type | Description
+
+| `*-vulnerabilities.json` / `.txt` | Vulnerability scan results (e.g., from Trivy or Grype)
+| `*-licenses.txt`                  | License reports (if available and/or needed )
+| `*-sbom.json` (CycloneDX or SPDX) | Software Bill of Materials
+| `*-dependency-analysis.json`      | Resolved dependency trees and usage scopes
+| `*-sonar-component.json`          | Code quality and technical debt metrics
+| `.png` Images                     | Visuals (e.g., dependency trees, coverage graphs)
+| IST-Zustand                       | Textual summaries of the current state of the project
+| Gepardec AutoUpdate results       | Automated analysis results
+
+|===
+
+=== ChatGPT Prompt Input
+As a prompt example, the MEGA-Backend is used and the full text-file can be found at: link:report-template/prompt.txt[Mega-Backend Example Prompt]- The
+prompt is structured to guide ChatGPT through the report generation process, ensuring all necessary sections are covered and formatted correctly.
+
+==== Sections
+This chapter explains each top-level section defined in the standardized German prompt for the analysis report. Each section is identified by its `##` heading and described in terms of its role, whether it is generic or must be adapted for each report.
+
+===== ## Titel des Berichts
+
+*Purpose:*
+Specifies the official title of the report, e.g., _“Analysebericht Mega-Backend – Sicherheits- und Abhängigkeitsanalyse (Vx.x)”_.
+
+*Type:*
+
+  *Project-specific* – Project name and report version must be adjusted per report instance.
+
+===== ## Ziel
+
+*Purpose:*
+Defines the general goal of the report: to technically assess the current state of the system regarding security, technology, architecture, and maintainability.
+
+*Type:*
+
+  *Generic* – The goal is always the same and reused for every report.
+
+===== ## Format & Stil
+
+*Purpose:*
+Describes the expected language (German), technology naming (original language), stylistic tone (technical, precise), formatting (`.docx`), placeholder usage, and the required IEEE citation style.
+
+*Type:*
+
+  *Generic* – Uniform across all reports and not to be changed.
+
+===== ## Verbindliche Kapitelübersicht (gemäß Instruktion & Formatvorgabe)
+
+*Purpose:*
+Outlines the fixed chapter structure from chapter 1 through 7. This structure is enforced and already present in the provided Word template.
+
+*Type:*
+
+  *Generic* – Not modifiable and consistent for all projects.
+
+===== ## Eingebundene Quelldateien (Pflichtintegration)
+
+*Purpose:*
+Lists the required data sources and files to be analyzed and integrated into the report (e.g., `pom.xml`, CSV files, SBOMs, Sonar exports, IST-Stand).
+
+*Type:*
+
+  *Partially project-specific* – File types and expected content are fixed, but the actual values and analysis results are unique per project.
+
+===== ## Inhaltliche Anforderungen
+
+*Purpose:*
+Specifies in detail what each report section must include: data tables, vulnerability counts, test coverage, metric thresholds, required placeholders for visual elements, and concrete values from source files.
+
+*Type:*
+
+  *Mixed* – Structure and requirements are fixed, but contents (e.g., tools, metrics, CVEs) are dependent on the evaluated project.
+
+===== ## Ausgabeformat
+
+*Purpose:*
+Specifies that the final document must be delivered as a fully populated `.docx` file using the provided layout template (`Empty-Analysebericht-V1.0.docx`) and must include all required structural and formatting elements.
+
+*Type:*
+
+  *Generic* – Applies identically to all reports.
+
+===== ## Abfolge
+
+*Purpose:*
+Describes the prescribed execution steps in generating the report, from parsing the prompt, to analyzing source data, following chapter structure, inserting placeholders, and ensuring review markers for reusable sections.
+
+*Type:*
+
+  *Mixed* – Fixed procedural logic that must be followed for all reports, BUT can or in a lot of cases must be adapted to the project.
+
+=== Known Issues
+
+* ChatGPT sometimes struggles with complex formatting in Word documents, especially when it comes to table-of-content, tables and images (therefore, for images only placeholders are placed)
+* ChatGPT sometimes struggles with rendering  the Word document and has problems providing the download-Link. 💡 *Solution*: Sadly, the only solution for now is to just start over again.
+* ChatGPT most of the time, even told different, generates each chapter separately. 💡 *Solution*: Just provided "fortsetzen" or similar commands  to continue the report generation until it is finalized
+
+=== Tips
+
+* Use a project for each report generation to keep the files and results organized.
+* More data and context means better results. Provide as much relevant information as possible in the prompt, as data set or textual e.g. IST-Stand
+* Do shy away from just starting from scratch, most of the time it is easier and results in better results.
 
 == References
 
